BIDS/eDip branding & placeholder for Add Button
eDip href needs to be styled to remove underline, etc.
Add Lead Button needs to trigger the same function as the original All
Lead Button (in filter pane)

--- a/index.html
+++ b/index.html
@@ -36,12 +36,9 @@
 
     </head>
     <body>
-        <div id="desc">
-            <h1>Map</h1>
-
-            <p>HR/CDA/EL</p>
-
-            
-        </div>
+		<div id="leadAddText"><p>Add your lead!</p></div>
+		<div id="leadAdd"></div>
+		<div id="logo"><p>Business Information Database System</p></div>
+		<div id="credit"><a href="http://www.state.gov/m/irm/ediplomacy/">powered by eDiplomacy</a></div>
     </body>
 </html>
