--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/adapter/ext/ext-base.js"></script>
         <script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/ext-all.js"></script>
         <link rel="stylesheet" type="text/css" href="http://extjs.cachefly.net/ext-3.4.0/resources/css/ext-all.css" />
-        <link rel="stylesheet" type="text/css" href="http://extjs.cachefly.net/ext-3.4.0/examples/shared/examples.css" />
+        <link rel="stylesheet" type="text/css" href="ext-3.4.0.css" />
 		<link rel="stylesheet" href="Ext.ux.form.CheckboxCombo.min.css" />
         <script src="OpenLayers/lib/OpenLayers.js"></script>
         <script type="text/javascript" src="GeoExt/script/GeoExt.js"></script>
