--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 		<script type="text/javascript" src="Ext.ux.PanelCollapsedTitle.js"></script>
 		<script type="text/javascript" src="Ext.ux.form.CheckboxCombo.min.js"></script>
 		
+		<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ 
+  ga('create', 'UA-42084422-1', '54.214.19.215:8080');
+  ga('send', 'pageview');
+ 
+</script>
 
         <style type="text/css">
         .legend {
