Moved logo and associated elements into new div

--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
 
     </head>
     <body>
-		<div id="leadAddText"><p>Add your lead!</p></div>
-		<div id="leadAdd"></div>
-		<div id="logo"><p>Business Information Database System</p></div>
-		<div id="credit"><a href="http://www.state.gov/m/irm/ediplomacy/">powered by eDiplomacy</a></div>
-    </body>
+		<div id="container">
+				<div id="leadAddText"><p>Add your lead!</p></div>
+				<div id="leadAdd"></div>
+				<div id="logo"><p>Business Information Database System</p></div>
+				<div id="credit"><a href="http://www.state.gov/m/irm/ediplomacy/">powered by eDiplomacy</a></div>
+			</div>
+		</div>
+	</body>
 </html>
