--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         
         <script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/adapter/ext/ext-base.js"></script>
         <script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/ext-all.js"></script>
-		<script type="text/javascript" src="../OpenLayers/lib/OpenLayers.js"></script>
-        <script type="text/javascript" src="../GeoExt/script/GeoExt.js"></script>
+		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
+        <script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
         <script type="text/javascript" src="js/bids.js"></script>
 		<script type="text/javascript" src="js/FeaturePopups.js"></script>
 		<script type="text/javascript" src="js/patches_OL-popup-autosize.js"></script>
@@ -17,10 +17,10 @@
 		<link rel="stylesheet" type="text/css" href="css/custom.css" />
 		<link rel="stylesheet" type="text/css" href="css/ez.css" />
 		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
-		<link rel="stylesheet" type="text/css" href="../ext-3.4.0/resources/css/ext-all.css" />
+		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
         <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
 		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
-		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="../ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
+		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="../lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
         <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
