--- a/data.html
+++ b/data.html
@@ -1,51 +1,135 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>BIDS</title>
-        
-        <script type="text/javascript" src="js/check.js"></script>
+        <title>BIDS: Business Information System Database</title>     
+        <script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/adapter/ext/ext-base.js"></script>
+        <script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/ext-all.js"></script>
+		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
+        <script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
+        <script type="text/javascript" src="js/bids.js"></script>
+		<script type="text/javascript" src="js/FeaturePopups.js"></script>
+		<script type="text/javascript" src="js/patches_OL-popup-autosize.js"></script>
+		<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>
+		<script type="text/javascript" src="js/Ext.ux.form.CheckboxCombo.min.js"></script>
+		<script type="text/javascript" src="js/tile.stamen.js?v1.2.2"></script>
+		<script type="text/javascript" src="js/check.js"></script>
 		<script type="text/javascript" src="js/yes.js"></script>
-		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
-		<link rel="stylesheet" type="text/css" href="http://extjs.cachefly.net/ext-3.4.0/resources/css/ext-all.css" />
-        <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
-		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="../ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
 		<link rel="stylesheet" type="text/css" href="css/custom.css" />
 		<link rel="stylesheet" type="text/css" href="css/ez.css" />
+		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
+		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
+        <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
+		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
+		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="../lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
         <script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 				})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
  
-				ga('create', 'UA-42151027-1', '54.214.19.215:8080');
+				ga('create', 'UA-42151027-1', 'localhost');
 				ga('send', 'pageview');
-  
-			var check;
-			
-</script>
-
+		</script>
         <style type="text/css">
-        .legend {
-            padding-left: 18px;
-        }
-        .x-tree-node-el {
-            border-bottom: 1px solid #ddd;
-            padding-bottom: 3px;
-        }
-        .x-tree-ec-icon {
-            width: 3px;
-        }
-        .gx-tree-layer-icon {
-            display: none;
-        }
-		
-		body {
-			background-color: #FFFFFF !important;
-			font-family: helvetica,tahoma,verdana,sans-serif;
-			font-size: 12px;
-			padding: 0px;
-		}
-    </style>
-
+			.legend {
+				padding-left: 18px;
+			}
+			.x-tree-node-el {
+				border-bottom: 1px solid #ddd;
+				padding-bottom: 3px;
+			}
+			.x-tree-ec-icon {
+				width: 3px;
+			}
+			.gx-tree-layer-icon {
+				display: none;
+			}
+			.olControlAttribution {
+				z-index: 0 !important;
+			}
+			.x-form-item {
+				overflow: false !important;
+			}
+			.ext-gecko {
+				overflow: false !important;
+			}
+			.x-window-body {
+				overflow: false !important;
+			}
+			<!--.olControlFeaturePopups_list {
+				width: 250px !important; 
+				height: 200px !important;
+				overflow-y: scroll !important;
+			}-->
+			.olFramedCloudPopupContent {
+				width: 250px !important; 
+				overflow-y: hidden !important;
+			}
+			.popupLeadList {
+				overflow-y: auto !important;
+				width: 250px !important;
+				height: 160px !important;
+			}
+			a:link {
+				color:#000000;
+				text-decoration:none;
+			}
+			a:visited {
+				color:#000000;
+				text-decoration:none;
+			}
+			a:hover {
+				color:#707070;
+				text-decoration:none;
+			}
+			a:active {
+				color:#FF6600;
+				text-decoration:none;
+			}
+			.leadList {
+				font-weight: bold;
+			}
+			.x-form-element {
+				padding-left: 5px !important;
+			}
+			.x-form-el-ext-comp {
+				padding-left: 0px !important;
+			}
+			.x-checkboxcombo-list {
+				width: 200px !important;
+			}
+			.x-checkboxcombo-list-inner {
+				width: 200px !important;
+			}
+			.x-column {
+				padding-left:10px !important;
+				width: 150px !important;
+			}
+			.x-column-inner {
+				padding-top: 15px !important;
+				width: 340px !important;
+			}
+			.x-form-check-group {
+				<!--border: 1px solid #ddd;-->
+				width: 300px !important;
+				overflow: visible !important;
+			}
+			.x-form-item-label {
+				padding-left: 15px !important;
+				width: 0px !important;
+			}
+			#ext-comp-1011 {
+				width: 285px !important;
+			}
+			#ext-gen32 {
+				width: 285px !important;
+			}
+			body {
+				background-color: #FFFFFF !important;
+				font-family: helvetica,tahoma,verdana,sans-serif;
+				font-size: 12px;
+				padding: 0px;
+			}
+		</style>
     </head>
     <body>
 		<div class="container">
