Adding popup to recommend Chrome/FF (Issue #36)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 		<script type="text/javascript" src="js/tile.stamen.js?v1.2.2"></script>
 		<script type="text/javascript" src="js/check.js"></script>
 		<script type="text/javascript" src="js/yes.js"></script>
+		<script language="Javascript">
+		{
+			if (navigator.appName == "Microsoft Internet Explorer")
+				alert("Please use Chrome or Firefox for full site functionality.");
+		}
+		</script>
+	
 		<link rel="stylesheet" type="text/css" href="css/custom.css" />
 		<link rel="stylesheet" type="text/css" href="css/ez.css" />
 		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
