--- a/index.html
+++ b/index.html
@@ -13,15 +13,7 @@
 		<script type="text/javascript" src="js/tile.stamen.js?v1.2.2"></script>
 		<script type="text/javascript" src="js/check.js"></script>
 		<script type="text/javascript" src="js/yes.js"></script>
-		<script language="Javascript">
-		{
-			if (navigator.appName == "Microsoft Internet Explorer")
-				{alert("1 Please use Chrome or Firefox for full site functionality.");}
-			else if (navigator.userAgent.indexOf("MSIE") > -1)
-				{alert("2 Please use Chrome or Firefox for full site functionality.");}
-		}
-		</script>
-	
+		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/custom.css" />
 		<link rel="stylesheet" type="text/css" href="css/ez.css" />
 		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
