Popup and search panel changes (Issue #4)

--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
 				width: 250px !important; 
 				overflow-y: hidden !important;
 			}
-			.popupLeadList {
-				overflow-y: auto !important;
-				width: 250px !important;
-				height: 160px !important;
-			}
+
+
+
+
+
 			a:link {
 				color:#000000;
-				text-decoration:none;
+				text-decoration:underline;
 			}
 			a:visited {
 				color:#000000;
-				text-decoration:none;
+				text-decoration:underline;
 			}
 			a:hover {
 				color:#707070;
@@ -84,22 +84,22 @@
 				padding-left: 0px !important;
 			}
 			.x-checkboxcombo-list {
-				width: 200px !important;
+				width: auto !important;
 			}
 			.x-checkboxcombo-list-inner {
-				width: 200px !important;
+				width: auto !important;
 			}
 			.x-column {
 				padding-left:10px !important;
-				width: 150px !important;
+				width: auto !important;
 			}
 			.x-column-inner {
 				padding-top: 15px !important;
-				width: 340px !important;
+				width: auto !important;
 			}
 			.x-form-check-group {
 				<!--border: 1px solid #ddd;-->
-				width: 300px !important;
+				width: auto !important;
 				overflow: visible !important;
 			}
 			.x-form-item-label {
@@ -111,6 +111,9 @@
 			}
 			#ext-gen32 {
 				width: 285px !important;
+			}
+			#ext-gen98 {
+				height: 315px !important;
 			}
 		</style>     
 		<script>
