--- a/add.html
+++ b/add.html
@@ -152,7 +152,10 @@
 							<a href="data.html">Data</a>
 						</li>
 						<li>
-							<a href="faqs.html">FAQS</a>
+							<a href="faqs.html">FAQs</a>
+						</li>
+						<li>
+							<a href="help.html">Help</a>
 						</li>
 					</ul>
 				</div>
