--- a/help.html
+++ b/help.html
@@ -152,10 +152,10 @@
 							<a href="data.html">Data</a>
 						</li>
 						<li>
-							<a href="#">FAQs</a>
+							<a href="faqs.html">FAQs</a>
 						</li>
 						<li>
-							<a href="help.html">Help</a>
+							<a href="#">Help</a>
 						</li>
 					</ul>
 				</div>
@@ -163,32 +163,10 @@
 			<div class="content">
 				<div class="row">
 					<h1>
-						Frequently Asked Questions
+						Help!
 					</h1>
-					<div >
-						<h3>
-							Where does the data come from?
-						</h3>
-						<div>
-							<p>
-								The data comes from vendors that license the data, U.S. government sources, government sources from the countries included in the map, and from the companies themselves. The data is vetted by the vendors and the government ministries.&nbsp;
-							</p>
-						</div>
-						<h3>
-							How often is the data updated?
-						</h3>
-						<div>
-							<p>
-								We get quarterly updates from the vendors who license us the data. Data received from government sources and companies is updated when those authenticated users enter it.
-							</p>
-						</div>
-						<h3>
-							How accurate is the data?
-						</h3>
-						<div>
-							<p>
-								The data is licensed from vendors whose job it is to ensure accuracy. However this data will change all the time; particularly "jobs created." While we have done everything possible to ensure accuracy, the data is not guaranteed to be 100% accurate.
-							</p>
+					<div>
+						No, seriously. Help!!
 						</div>
 					</div>
 				</div>
