--- a/index.html
+++ b/index.html
@@ -100,11 +100,17 @@
 			#ext-comp-1011 {
 				width: 285px !important;
 			}
-			#ext-gen32 {
-				width: 285px !important;
-			}
 			#ext-gen98 {
 				height: 315px !important;
+			}
+			.popupLeadTitle {
+				font-size: 14px;
+				font-weight: bold !important;
+				text-decoration: none !important;
+				width: 220px !important;
+			}
+			#ext-gen107 {
+				height: 15px !important;
 			}
 		</style>     
 		<script>
