--- a/index.html
+++ b/index.html
@@ -100,18 +100,19 @@
 			#ext-comp-1011 {
 				width: 285px !important;
 			}
-			#ext-gen98 {
-				height: 315px !important;
-			}
 			.popupLeadTitle {
 				font-size: 14px;
 				font-weight: bold !important;
 				text-decoration: none !important;
 				width: 220px !important;
 			}
-			#ext-gen107 {
-				height: 15px !important;
+			#ext-gen106 {
+				height: 310px !important;
 			}
+			#ext-comp-1061{
+				top: 485px !important;
+			}
+			
 		</style>     
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
