Linking code to OpenNet approval (Issue #31)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script type="text/javascript" src="js/Ext.ux.form.CheckboxCombo.min.js"></script>
 		<script type="text/javascript" src="js/tile.stamen.js?v1.2.2"></script>
 		<script type="text/javascript" src="js/check.js"></script>
-		<script type="text/javascript" src="js/yes.js"></script>
+		<script type="text/javascript" src="http://tradeleads.state.gov/yes.js"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/custom.css" />
 		<link rel="stylesheet" type="text/css" href="css/ez.css" />
