adding the ask us link
directs all questions to the BIDS mailbox

--- a/faqs.html
+++ b/faqs.html
@@ -190,6 +190,14 @@
 								The data is licensed from vendors whose job it is to ensure accuracy. However this data will change all the time; particularly "jobs created." While we have done everything possible to ensure accuracy, the data is not guaranteed to be 100% accurate.
 							</p>
 						</div>
+						<h3>
+							Have another question?
+						</h3>
+						<div>
+							<p>
+								<a href="mailto:BIDS-Mailbox@state.gov">Ask us !</a>
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
