Help page styling (Issue #64)

--- a/help.html
+++ b/help.html
@@ -28,7 +28,7 @@
     	}
     	
     	article {
-    	  max-width: 50em;
+    	  max-width: 75%;
     	  background: white;
     	  padding: 2em;
     	  margin: 1em auto;
@@ -199,46 +199,46 @@
                             Clicking on either the "Add A Lead" button on the top right of the page or at the bottom of the left panel will open a pop up window where you can enter information about business opportunities.  The data fields are described below. <u>Underlined fields are required</u>, others are optional.
                         </p>
                         <dl>
-                            <dt>Project Title</dt>
-                            <dd>Please use the official title of the project.  Where there is no official title, please use a brief description, e.g.: Ring Road Project.</dd>
-                            <dt>Country</dt>
-                            <dd>Please indicate the country where the project will be located.</dd>
-                            <dt>Specific Location</dt>
-                            <dd>Please indicate the city or a specific landmark such as a university, natural feature, or province.  If the project is nationwide or is not easily connected with a single location, like an electrification project in several different provinces, please indicate geographic area.  Check to make sure that your project will map properly by going to google and attempting to map it there.</dd>
-                            <dt>DOS Region</dt>
-                            <dd>Choose the appropriate State Department regional bureau from the drop down list.</dd>
-                            <dt>Sector</dt>
-                            <dd>Check one box indicating the appropriate sector for the project.  <em>For ease of data entry we've established a small number of very broad sectors.  Some projects may bridge two or more sectors, and some may not fit well into any of the six.  Please use the "Keywords" field to add additional information that may help users find your project.</em></dd>
-                            <dt>Project Size</dt>
-                            <dd>Please enter the U.S. dollar value (or estimate) of the project.</dd>
-                            <dt>Project Number</dt>
-                            <dd>Many projects have some type of identifying number.  Please indicate the reference number from the government, bank, etc., associated with the project.  If there are two separate funding sources and therefore two different project numbers, please indicate them here.</dd>
-                            <dt>Project Funding Source</dt>
-                            <dd>Enter the name of the organization or bank providing the funds for this project.  Normally this will be a government ministry, or a MDB.</dd>
-                            <dt>Information Source</dt>
-                            <dd>Select from the drop down list.  If you are entering a project at an overseas post, select "Post Identified Project."  Projects added to BIDS from MDB sites will be identified with the sponsoring bank.  Offices in Washington can also enter projects and would select "Washington Identified Project.”</dd>
-                            <dt>Project Description and Bidding Requirements</dt>
-                            <dd>Include as much of the project description as possible so that the prospective bidder will understand what the project is.  Also include any special or specific bidding requirements that the government may have and bid deadline.</dd>
-                            <dt>Key Words</dt>
-                            <dd>Please enter any combination of key words that describe the project, e.g., Power, Dam, Hydroelectricity, Renewable, Water, and Environment.  Also enter terms that may better define the sector.</dd>
-                            <dt>Project Announced</dt>
-                            <dd>When was this project publicly announced?  Alternatively, the date entered here may be the date post initially heard about the project if post learned about the project prior to a formal announcement.</dd>
-                            <dt>Expected Tender Date</dt>
-                            <dd>Indicate when the project sponsor expects to release a tender for the project.  This may need to be updated as new information becomes available.</dd>
-                            <dt>Borrowing Entity</dt>
-                            <dd>Please indicate the government agency borrowing money for the project. If none, say "none".</dd>
-                            <dt>Implementing Entity</dt>
-                            <dd>Indicate what government ministry or other entity will be responsible for issuing the project documents an overseeing the project.</dd>
-                            <dt>Project Website</dt>
-                            <dd>If there is a website link to more information about the project, enter the web address here.</dd>
-                            <dt>Submitting Officer</dt>
-                            <dd>Please enter the name of the officer submitting the lead, or the name of the person at post who would be the most appropriate point of contact for follow-up questions from Washington or the private sector.</dd>
-                            <dt>Submitting Officer Contact</dt>
-                            <dd>Please enter the e-mail address of the person named in the "Submitting Officer" box.</dd>
-                            <dt>Implementing Entity POC(s) and Contact Information</dt>
-                            <dd>Please include the principal and secondary contacts, names, address, email addresses and phone numbers.</dd>
-                            <dt>Post Comments</dt>
-                            <dd>Include information that will help the bidders understand the dynamics of the bid.  Also, if there will be a Direct Line call, please indicate date, time, number to register and requirements.  <strong>N.B.</strong>  BIDS is not currently designed or authorized to house any classified or sensitive information.  You should <strong>assume any information you enter here will be available to the general public</strong>.</dd>
+                            <h4>Project Title</h4>
+                            <p>Please use the official title of the project.  Where there is no official title, please use a brief description, e.g.: Ring Road Project.</p>
+                            <h4>Country</h4>
+                            <p>Please indicate the country where the project will be located.</p>
+                            <h4>Specific Location</h4>
+                            <p>Please indicate the city or a specific landmark such as a university, natural feature, or province.  If the project is nationwide or is not easily connected with a single location, like an electrification project in several different provinces, please indicate geographic area.  Check to make sure that your project will map properly by going to google and attempting to map it there.</p>
+                            <h4>DOS Region</h4>
+                            <p>Choose the appropriate State Department regional bureau from the drop down list.</p>
+                            <h4>Sector</h4>
+                            <p>Check one box indicating the appropriate sector for the project.  <em>For ease of data entry we've established a small number of very broad sectors.  Some projects may bridge two or more sectors, and some may not fit well into any of the six.  Please use the "Keywords" field to add additional information that may help users find your project.</em></p>
+                            <h4>Project Size</h4>
+                            <p>Please enter the U.S. dollar value (or estimate) of the project.</p>
+                            <h4>Project Number</h4>
+                            <p>Many projects have some type of identifying number.  Please indicate the reference number from the government, bank, etc., associated with the project.  If there are two separate funding sources and therefore two different project numbers, please indicate them here.</p>
+                            <h4>Project Funding Source</h4>
+                            <p>Enter the name of the organization or bank providing the funds for this project.  Normally this will be a government ministry, or a MDB.</p>
+                            <h4>Information Source</h4>
+                            <p>Select from the drop down list.  If you are entering a project at an overseas post, select "Post Identified Project."  Projects added to BIDS from MDB sites will be identified with the sponsoring bank.  Offices in Washington can also enter projects and would select "Washington Identified Project.”</p>
+                            <h4>Project Description and Bidding Requirements</h4>
+                            <p>Include as much of the project description as possible so that the prospective bidder will understand what the project is.  Also include any special or specific bidding requirements that the government may have and bid deadline.</p>
+                            <h4>Key Words</h4>
+                            <p>Please enter any combination of key words that describe the project, e.g., Power, Dam, Hydroelectricity, Renewable, Water, and Environment.  Also enter terms that may better define the sector.</p>
+                            <h4>Project Announced</h4>
+                            <p>When was this project publicly announced?  Alternatively, the date entered here may be the date post initially heard about the project if post learned about the project prior to a formal announcement.</p>
+                            <h4>Expected Tender Date</h4>
+                            <p>Indicate when the project sponsor expects to release a tender for the project.  This may need to be updated as new information becomes available.</p>
+                            <h4>Borrowing Entity</h4>
+                            <p>Please indicate the government agency borrowing money for the project. If none, say "none".</p>
+                            <h4>Implementing Entity</h4>
+                            <p>Indicate what government ministry or other entity will be responsible for issuing the project documents an overseeing the project.</p>
+                            <h4>Project Website</h4>
+                            <p>If there is a website link to more information about the project, enter the web address here.</p>
+                            <h4>Submitting Officer</h4>
+                            <p>Please enter the name of the officer submitting the lead, or the name of the person at post who would be the most appropriate point of contact for follow-up questions from Washington or the private sector.</p>
+                            <h4>Submitting Officer Contact</h4>
+                            <p>Please enter the e-mail address of the person named in the "Submitting Officer" box.</p>
+                            <h4>Implementing Entity POC(s) and Contact Information</h4>
+                            <p>Please include the principal and secondary contacts, names, address, email addresses and phone numbers.</p>
+                            <h4>Post Comments</h4>
+                            <p>Include information that will help the bidders understand the dynamics of the bid.  Also, if there will be a Direct Line call, please indicate date, time, number to register and requirements.  <strong>N.B.</strong>  BIDS is not currently designed or authorized to house any classified or sensitive information.  You should <strong>assume any information you enter here will be available to the general public</strong>.</p>
                         </dl>
                         <h4>Editing a Trade Lead</h4>
                         <p>
@@ -260,18 +260,18 @@
                         </p>
                         <h3 id="glossary">GLOSSARY</h3>
                         <dl>
-                            <dt>Archived</dt>
-                            <dd>BIDS entries will be archived if they move to an "in procurement," "fulfilled," "unfulfilled," or "cancelled" status, or if they have not been edited or updated in the previous 90 days.</dd>
-                            <dt>Cancelled</dt>
-                            <dd>This indicates that the government or MDB took an active decision to cancel a project.</dd>
-                            <dt>Fulfilled</dt>
-                            <dd>Fulfilled indicates that a project has been completed.</dd>
-                            <dt>In Procurement</dt>
-                            <dd>A project is "in procurement" once funding has been approved and tender documents for contractors, subcontractors, and suppliers have been issued, and/or the projects is actively being implemented.</dd>
-                            <dt>Pipeline</dt>
-                            <dd>A project is said to be in the 'pipeline' from the earliest point of identification through project preparation, appraisal, and final approval.  For a MDB project, 'pipeline' generally refers to any point in the process before the bank's Board of Directors grants final approval.  <strong>This is the period of time when BIDS is most important -- U.S. companies have their best chance at gaining a contract when they are involved in the pipeline</strong>.</dd>
-                            <dt>Unfulfilled</dt>
-                            <dd>In BIDS, a project will be listed as 'unfulfilled' if we have no information on the status of a project after 90 days.</dd>
+                            <h4>Archived</h4>
+                            <p>BIDS entries will be archived if they move to an "in procurement," "fulfilled," "unfulfilled," or "cancelled" status, or if they have not been edited or updated in the previous 90 days.</p>
+                            <h4>Cancelled</h4>
+                            <p>This indicates that the government or MDB took an active decision to cancel a project.</p>
+                            <h4>Fulfilled</h4>
+                            <p>Fulfilled indicates that a project has been completed.</p>
+                            <h4>In Procurement</h4>
+                            <p>A project is "in procurement" once funding has been approved and tender documents for contractors, subcontractors, and suppliers have been issued, and/or the projects is actively being implemented.</p>
+                            <h4>Pipeline</h4>
+                            <p>A project is said to be in the 'pipeline' from the earliest point of identification through project preparation, appraisal, and final approval.  For a MDB project, 'pipeline' generally refers to any point in the process before the bank's Board of Directors grants final approval.  <strong>This is the period of time when BIDS is most important -- U.S. companies have their best chance at gaining a contract when they are involved in the pipeline</strong>.</p>
+                            <h4>Unfulfilled</h4>
+                            <p>In BIDS, a project will be listed as 'unfulfilled' if we have no information on the status of a project after 90 days.</p>
                         </dl>
                     </div>
                 </article>
