Help text proofing

--- a/help.html
+++ b/help.html
@@ -101,7 +101,7 @@
                     <div class="helpcontent">
                         <h3 id="intro">INTRODUCTION</h3>
                         <p>
-                            Many U.S. businesses -- and in particular, small and medium sized enterprises -- report that a major obstacle to exporting is a lack of actionable market intelligence.  In line with the President's National Export Initiative and with Executive Order 13630 of December 6, 2012, EB IRM’s Office of eDiplomacy have developed BIDS -- the Business Information Database System -- as an open, internet-based platform to aggregate information on tender opportunities and trade leads, and make that information available to U.S. business.
+                            Many U.S. businesses -- and in particular, small and medium sized enterprises -- report that a major obstacle to exporting is a lack of actionable market intelligence.  In line with the President's National Export Initiative and with Executive Order 13630 of December 6, 2012, EB IRM's Office of eDiplomacy have developed BIDS -- the Business Information Database System -- as an open, internet-based platform to aggregate information on tender opportunities and trade leads, and make that information available to U.S. business.
                         </p>
                         <p>
                             BIDS is populated by data entered at posts and collected from the Multilateral Development Banks (MDBs).  At present, the focus of BIDS is on major, strategic projects funded by MDBs or governments.  It's not intended to be a comprehensive catalog of the universe of projects; the focus is on projects where U.S. firms can be competitive.
