Replaced Add Lead NavButton w/ Contact Us

--- a/help.html
+++ b/help.html
@@ -76,9 +76,6 @@
 							<a href="index.html">Home</a>
 						</li>
 						<li>
-							<a href="javascript:checkTest();">Add a Lead</a>
-						</li>
-						<li>
 							<a href="resources.html">Resources</a>
 						</li>
 						<li>
@@ -89,6 +86,9 @@
 						</li>
 						<li>
 							<a href="#">Help</a>
+						</li>
+						<li>
+							<a href="mailto:BIDS-Mailbox@state.gov">Contact Us</a>
 						</li>
 					</ul>
 				</div>
