--- a/add.html
+++ b/add.html
@@ -46,6 +46,9 @@
 						</li>
 						<li>
 							<a href="help.html">Help</a>
+						</li>						
+						<li>
+							<a href="mailto:BIDS-Mailbox@state.gov">Contact Us</a>
 						</li>
 					</ul>
 				</div>
