--- a/resources.html
+++ b/resources.html
@@ -31,9 +31,6 @@
 							<a href="index.html">Home</a>
 						</li>
 						<li>
-							<a href="javascript:checkTest();">Add a Lead</a>
-						</li>
-						<li>
 							<a href="#">Resources</a>
 						</li>
 						<li>
@@ -44,6 +41,9 @@
 						</li>
 						<li>
 							<a href="help.html">Help</a>
+						</li>
+						<li>
+							<a href="mailto:BIDS-Mailbox@state.gov">Contact Us</a>
 						</li>
 					</ul>
 				</div>
