Using Google Maps as base
OSM's XYZ layer type and Bing were causing problems..

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 		<script type="text/javascript" src="js/Ext.ux.form.CheckboxCombo.min.js"></script>
 		<script type="text/javascript" src="js/tile.stamen.js?v1.2.2"></script>
 		<script type="text/javascript" src="js/check.js"></script>
+		<!--<script type="text/javascript" src="js/addDataLayer.js"></script>
+		<script type="text/javascript" src="js/search.js"></script>
+		<script type="text/javascript" src="js/addLead.js"></script>-->
+		<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
 		<script type="text/javascript" src="http://tradeleads.state.gov/yes.js"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/custom.css" />
