--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 		<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.form.CheckboxCombo.min.js"></script>
 		<script type="text/javascript" src="js/check.js"></script>
+		<script type="text/javascript" src="http://10.47.115.214:8080/bids/js/yes.js"></script>
 		<!--<script type="text/javascript" src="js/addDataLayer.js"></script>-->
 		<script type="text/javascript" src="js/search.js"></script>
 		<script type="text/javascript" src="js/addLead.js"></script>
 		<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
-		<script type="text/javascript" src="http://tradeleads.state.gov/yes.js"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/custom.css" />
 		<link rel="stylesheet" type="text/css" href="css/ez.css" />
