Testing State only functionality (#31)

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
         <script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
         <script type="text/javascript" src="js/domain.js"></script>
-		<script type="text/javascript" src="js/bids.js"></script>
-		<script type="text/javascript" src="http://10.47.115.214:8080/bids/js/yes.js"></script>
+		
 		<script type="text/javascript" src="js/check.js"></script>
+		<script type="text/javascript" src="js/yes.js"></script>
+		<script type="text/javascript" src="js/bids.js"></script>
+		<!--<script type="text/javascript" src="http://10.47.115.214:8080/bids/js/yes.js"></script>-->
 		<script type="text/javascript" src="js/FeaturePopups.js"></script>
 		<script type="text/javascript" src="js/patches_OL-popup-autosize.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>
