--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
         <script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
         <script type="text/javascript" src="js/domain.js"></script>
 		<script type="text/javascript" src="js/check.js"></script>
-		<!--<script type="text/javascript" src="http://10.47.115.214:8080/bids/js/yes.js"></script>-->
-		<script type="text/javascript" id="checker""></script>
+		<script type="text/javascript" id="checker"></script>
 		<script type="text/javascript" src="js/bids.js"></script>
 		<script type="text/javascript" src="js/FeaturePopups.js"></script>
 		<script type="text/javascript" src="js/patches_OL-popup-autosize.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.form.CheckboxCombo.min.js"></script>
-		<!--<script type="text/javascript" src="js/addDataLayer.js"></script>-->
 		<script type="text/javascript" src="js/search.js"></script>
 		<script type="text/javascript" src="js/addLead.js"></script>
 		<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
