--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.form.CheckboxCombo.min.js"></script>
 		<script type="text/javascript" src="js/search.js"></script>
-		<script type="text/javascript" src="js/addLead.js"></script>
+		<!--<script type="text/javascript" src="js/addLead.js"></script>-->
 		<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/custom.css" />
