--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 			ga('send', 'pageview');
 		</script>
     </head>
-    <body onload="setTimeout(function(){document.getElementById('checker').src='http://10.47.115.214:8080/bids/js/yes.js'}, 5000)">
+    <body onload="setTimeout(function(){document.getElementById('checker').src='http://10.47.115.214:8080/lib/bids/js/yes.js'}, 5000)">
 	</body>
 </html>
