--- a/data.html
+++ b/data.html
@@ -1,19 +1,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>BIDS: Business Information System Database</title>
+        <title>BIDS: Business Information Database System</title>
 		<script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/adapter/ext/ext-base.js"></script>
         <script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/ext-all.js"></script>
 		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
         <script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
         <script type="text/javascript" src="js/domain.js"></script>
 		<script type="text/javascript" src="js/bidsGrid.js"></script>
-		<script type="text/javascript" src="js/FeaturePopups.js"></script>
-		<script type="text/javascript" src="js/patches_OL-popup-autosize.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>
-		<script type="text/javascript" src="js/Ext.ux.form.CheckboxCombo.min.js"></script>
-		<script type="text/javascript" src="js/tile.stamen.js?v1.2.2"></script>
-		<script type="text/javascript" src="js/check.js"></script>
-		<script type="text/javascript" src="http://tradeleads.state.gov/yes.js"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/custom.css" />
 		<link rel="stylesheet" type="text/css" href="css/ez.css" />
