--- a/faqs.html
+++ b/faqs.html
@@ -1,9 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>BIDS: Business Information System Database</title>
-        <script type="text/javascript" src="js/check.js"></script>
-		<script type="text/javascript" src="http://tradeleads.state.gov/yes.js"></script>
-		<script type="text/javascript" src="../lib/ieCheck.js"></script>
+        <title>BIDS: Business Information Database System</title>
+        <script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/custom.css" />
 		<link rel="stylesheet" type="text/css" href="css/ez.css" />
 		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
