--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>BIDS: Business Information System Database</title>
+        <title>BIDS: Business Information Database System</title>
 		<script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/adapter/ext/ext-base.js"></script>
         <script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/ext-all.js"></script>
 		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
@@ -14,7 +14,6 @@
 		<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.form.CheckboxCombo.min.js"></script>
 		<script type="text/javascript" src="js/search.js"></script>
-		<!--<script type="text/javascript" src="js/addLead.js"></script>-->
 		<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/custom.css" />
